saves/test/demo_full_20240802_193545/mux2to1v/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp mux2to1v_tb.v mux2to1v.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
mux2to1v_tb.v:75: $finish called at 80000 (1ps)

iverilog cmd 2 error:

